Cleaner code and refactorings to improve small things.
Rename NewRiderActivity to RideCreationActivity
Rename RidesListActivity to EventRidesActivity
Move and combine IntentExtraKeys into a package-level class
Add getThisUser() function that should be used to get the user of the person using the app (mocked right now)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,9 @@
     <string name="pref_key_upgrade">PREF_KEY_UPGRADE</string>
     <string name="pref_key_contact_us">PREF_KEY_CONTACT_US</string>
     <string name="pref_key_version">PREF_KEY_VERSION</string>
-    <!-- Strings related to the RidesList activity -->
-    <string name="button_label_open_rideslistactivity">Open RidesListActivity</string>
+    <!-- Strings related to the EventRidesActivity -->
+    <string name="button_label_open_eventridesactivity">Look at all the rides for some event</string>
     <string name="content_description_profile_picture">Profile picture</string>
-    <!-- Miscellaneous strings-->
-    <string name="action_open_event_on_facebook">Open on Facebook</string>
-    <string name="title_activity_login">Create</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
@@ -34,6 +31,9 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <!-- Miscellaneous strings-->
+    <string name="action_open_event_on_facebook">Open on Facebook</string>
+    <string name="title_activity_login">Create</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
 
 </resources>
