Add typealiases, expand their usage, and similar minor changes. Also, DB objects now have foreign IDs instead of entire foreign objects.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
 
     <!-- Error strings -->
     <string name="error_field_required">This field is required</string>
+    <string name="error_nonpositive_passenger_count">Sorry, currently only positive numbers of passengers are allowed ;)</string>
 
     <!-- Miscellaneous strings-->
 
