--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_activity_eventrides">Event rides</string>
     <string name="title_activity_ridecreation">Creating a new ride</string>
     <string name="title_activity_ridepage">Ride page</string>
+    <string name="facebook_log_out">Log out</string>
 
     <!-- Settings -->
     <string name="pref_title_login_settings">Login</string>
@@ -51,6 +52,7 @@
     <string name="passenger_name">Name</string>
     <string name="passenger_pickup_spot">Spot</string>
     <string name="passenger_pickup_time_default_value">00:00</string>
+
 
     <!-- Error strings -->
     <string name="error_field_required">This field is required</string>
