--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,9 @@
 
     <!-- Error strings -->
     <string name="error_field_required">This field is required</string>
-    <string name="error_nonpositive_passenger_count">Sorry, currently only positive numbers of passengers are allowed ;)</string>
+    <string name="error_nonpositive_passenger_count">Sorry, currently only positive numbers of passengers are allowed
+        ;)
+    </string>
 
     <!-- Miscellaneous strings-->
 
