added events list to Main Activity. Added rides and passengers fragments to eventsRide activity. Changed facebook login button color.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,12 @@
 
     <!-- Error strings -->
     <string name="error_field_required">This field is required</string>
-    <string name="error_nonpositive_passenger_count">Sorry, currently only positive numbers of passengers are allowed ;)</string>
+    <string name="error_nonpositive_passenger_count">Sorry, currently only positive numbers of passengers are allowed
+        ;)
+    </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Miscellaneous strings-->
 
