--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,12 @@
     <string name="action_delete_ride">Delete ride</string>
     <string name="delete_ride_title">Delete ride</string>
     <string name="delete_ride_are_you_sure">Are you sure you want to permanently delete this ride?</string>
+    <string name="join_ride">Join ride</string>
+    <string name="request_is_pending">Request is pending</string>
+    <string name="request_declined">Request declined</string>
+    <string name="leave_ride">Leave ride</string>
+    <string name="ride_map">Ride map</string>
+    <string name="ride_map_with_pending_request">Ride map (+Requests)</string>
 
     <!-- Pickup -->
     <string name="passenger_name">Name</string>
@@ -79,5 +85,6 @@
     <!-- Miscellaneous strings-->
     <string name="logging_in">Logging in…</string>
     <string name="updating">(Updating…)</string>
+    <string name="loading">(Loading…)</string>
 
 </resources>
