Fix and improve a lot of things in the ride page, maps page, and transitions between them

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,9 +58,12 @@
     <string name="join_ride">Join ride</string>
     <string name="request_is_pending">Request is pending</string>
     <string name="request_declined">Request declined</string>
+    <string name="cancel_request">Cancel request</string>
     <string name="leave_ride">Leave ride</string>
     <string name="ride_map">Ride map</string>
     <string name="ride_map_with_pending_request">Ride map (+Requests)</string>
+    <string name="cancel_request_are_you_sure">Are you sure you want to cancel your request?</string>
+    <string name="leave_ride_are_you_sure">Are you sure you want to leave this ride?</string>
 
     <!-- Pickup -->
     <string name="passenger_name">Name</string>
