--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,10 @@
     <string name="cancel_request_are_you_sure">Are you sure you want to cancel your request?</string>
     <string name="leave_ride_are_you_sure">Are you sure you want to leave this ride?</string>
 
+    <!-- Map -->
+    <string name="discard_leftover_requests_title">Deny leftover requests</string>
+    <string name="discard_leftover_requests_description">Do you want to remove the non-accepted requests left on the map?</string>
+
     <!-- Pickup -->
     <string name="passenger_name">Name</string>
     <string name="passenger_pickup_spot">Spot</string>
@@ -89,5 +93,7 @@
     <string name="logging_in">Logging in…</string>
     <string name="updating">(Updating…)</string>
     <string name="loading">(Loading…)</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
 </resources>
