--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,10 @@
     <string name="passenger_pickup_time_default_value">00:00</string>
     <string name="choose_a_pick_up_location">Choose a pickup location!</string>
 
+    <!-- Map -->
+    <string name="pickup_click_title"/>
+    <string name="pickup_click_description">When do you want to add %s to the ride?</string>
+
     <!-- Slider -->
     <string name="next">NEXT</string>
     <string name="skip">SKIP</string>
@@ -92,8 +96,11 @@
     <string name="loading">(Loading…)</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="confirm">Confirm</string>
+    <string name="deny">Deny</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="do_you_want_to_join_event">There is already a group for this event, do you want to join?</string>
 
 </resources>
