Fix/refactor pickup denied/declined and stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,7 +103,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="confirm">Confirm</string>
-    <string name="deny">Deny</string>
+    <string name="deny">Decline</string>
     <string name="null_string">null_string</string>
 
     <!-- TODO: Remove or change this placeholder text -->
