--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,10 +59,13 @@
     <string name="join_ride">Join ride</string>
     <string name="request_is_pending">Request is pending</string>
     <string name="request_declined">Request declined</string>
+    <string name="request_accepted">You are in this ride!</string>
     <string name="leave_ride">Leave ride</string>
     <string name="cancel_request">Cancel request</string>
     <string name="ride_map">Ride map</string>
-    <string name="ride_map_with_pending_request">Ride map (+Requests)</string>
+    <string name="waiting_for_requests">Waiting for requests…</string>
+    <string name="confirm_1_pending_request">Confirm/decline pending request</string>
+    <string name="confirm_multiple_pending_requests">Confirm/decline %1$d pending requests</string>
     <string name="cancel_request_are_you_sure">Your request is pending until the driver approves it. Would you like to cancel the request?</string>
     <string name="leave_ride_are_you_sure">Are you sure you want to leave this ride?</string>
     <string name="toast_join_ride_success">Request sent!</string>
