--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <!-- Event Rides -->
     <string name="content_description_profile_picture">Profile picture</string>
     <string name="action_open_event_on_facebook">Open on Facebook</string>
+    <string name="action_leave_group">Leave group</string>
+    <string name="leave_group">Yes</string>
+    <string name="stay_group">No, stay</string>
 
     <!-- Ride -->
     <string name="driver_name">Name</string>
@@ -90,7 +93,7 @@
     <string name="start">GOT IT</string>
     <string name="welcome_screen_1_text">Share your ride with others.</string>
     <string name="welcome_screen_2_text">Join other rides.</string>
-    <string name="welcome_screen_3_text">Earn credits for sharing!</string>
+    <string name="welcome_screen_3_text">Get to the event and meet new people!</string>
 
     <!-- Error strings -->
     <string name="error_field_required">This field is required</string>
